# lyricsync

./: Cargo.toml  README.md
.github/workflows/: cd.yml
scripts/: bump-version.sh  pre-push  setup-git-hooks.sh
src/: main.rs
tests/: README.md  integration_test.rs
tests/fixtures/: 04 Avril Lavigne - I'm With You.lrc
